[package]
name = "spillink-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
redis = "0.21"
# serde = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.1"
warp = "0.3"
